# godabot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  pyproject.toml  requirements.txt
app/: configs.py  main.py
app/access/: __init__.py  clients.py  dependencies.py  forms.py  models.py  repositories.py  routers.py  schemas.py  services.py
app/access/migrations/: 001_create_function_refresh_update_at.sql  002_create_table_access_access.sql
app/bot/: __init__.py  clients.py  dependencies.py  forms.py  schemas.py  services.py
app/core/: autils.py  blockkit.py  cache.py  clients.py  constants.py  datastructures.py  exceptions.py  middleware.py  registry.py  schemas.py  services.py  timezone.py
app/core/client/: __init__.py  clients.py  forms.py  services.py
app/core/database/: __init__.py  models.py  pool.py  repositories.py  services.py  transaction.py
app/core/service/: __init__.py  schemas.py  services.py
app/gpt/: __init__.py  clients.py  dependencies.py  schemas.py  services.py
app/home/: __init__.py  routers.py
app/home/static/: index.css
app/home/templates/: index.html  nav.html  privacy.html  terms.html
app/lunch/: __init__.py  blockkits.py  constants.py  exceptions.py  forms.py  models.py  repositories.py  schemas.py  services.py  validators.py
app/migrations/: 001_refresh_update_at_create_function.sql  002_access_access_create_table.sql  003_slashcommand_slashcommand_create_table.sql  004_lunch_roulette_create_table.sql  005_lunch_lunch_create_table.sql  006_lunch_attendance_create_table.sql
app/nlp/: __init__.py  clients.py  forms.py  services.py
app/slashcommand/: __init__.py  constants.py  dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
app/vision/: __init__.py  clients.py  forms.py  schemas.py  searvices.py
templates/home/: footer.html  home.html  privacy.html  terms.html
tests/: configs.py  main.py  pool.py
tests/test_access/: clients.py  test_operations.py
tests/test_core/test_database/: __init__.py  repositories.py  routers.py  services.py  test_aioperf.py  test_operations.py
tests/test_database/: __init__.py  dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py  test_aioperf.py  test_operations.py
tests/test_database/migrations/: 001_create_test_temp.sql
tests/test_lunch/: test_services.py
tests/test_nlp/: test_gpt.py
tests/test_slashcommand/: test_services.py
