# Project
[project]
name = "godabot"
version = "0.2.0"
description = "godabot, slack integrated chat bot"
readme = "readme.md"
requires-python = "==3.11.*"
license = "© 2023 Goda Myeonggyu Choe <godachoese@gmail.com>. All rights reserved."
keywords = ["godabot", "slack", "slashcommand"]
authors = [{ name = "Goda", email = "goda.choese@gmail.com" }]
maintainers = [{ name = "Goda", email = "goda.choese@gmail.com" }]
classifiers = ["Development Status :: 1 - Planning", "Programming Language :: Python"]
dependencies = []

[project.urls]
homepage = "https://godabot.herokuapp.com"
documentation = "https://godabot.herokuapp.com/docs"
repository = "https://github.com/godabot/godabot"
releases = "https://github.com/godabot/godabot/releases"
privacy = "https://godabot.herokuapp.com/privacy"
terms = "https://godabot.herokuapp.com/terms"


# Isort
[tool.isort]
profile = "black"

# Black
[tool.black]
line-length = 100
target-version = ["py311"]

# Ruff
[tool.ruff]
ignore-init-module-imports = false
line-length = 100
src = ["app"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

# Pyright
[tool.pyright]
include = ["**", "*"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = "venv"
